(lang dune 3.14)

(name pilkkoja)

(generate_opam_files true)

(source
 (github Peikkohi/kielen-pillkoja))

(authors "Peikkohi")

(maintainers "Peikkohi")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name pilkkoja)
 (synopsis "Kielestä kielirakenteen muodostava kirjasto")
 (description "Kielestä kielirakenteen muodostava kirjasto")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
